# Untrusted-Translations-Android

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  settings.gradle.kts  update-config.json
app/: build.gradle.kts
app/src/foss/java/com/untrustedtranslations/android/processing/: OcrTranslationEngine.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/untrustedtranslations/android/: MainActivity.kt
app/src/main/java/com/untrustedtranslations/android/importer/: ComicImporter.kt  (+1 more)
app/src/main/res/drawable/: ic_launcher.xml  ic_launcher_foreground.xml
app/src/main/res/values/: themes.xml
artifacts/: add-dialog.xml  add-text-deleted.xml  add-text-filled.xml  add-text.xml  after-add-live.xml  after-folder-export.xml  after-four-resize.xml  after-import.xml  ai-settings-dialog.xml  ai-settings-home.xml  applied.xml  blank-key-error.xml  block1-final.xml  block1.xml  block2-bottom.xml  block4.xml  block5-ready.xml  block5-ready2.xml  bluestacks-window.xml  bottom-nav.xml  cold-restart-persistence.xml  cold-restart.xml  current-ocr-page.xml  current-user-screen.xml  current.xml  dedup-page3.xml  deep-progress.xml  downloads.xml  editor-last-detected.xml  editor-manual-excluded.xml  fixed-block2.xml  fixed-block3.xml  fixed-block4.xml  fixed-block5.xml  fixed-block6.xml  fixed-block7.xml  fixed-editor1-bottom.xml  fixed-editor1.xml  fixtures.xml  folder-confirm-fixed.xml  (+53 more)
artifacts/runtime-fixtures/: real-manga-three-page-copy.cbz
artifacts/runtime-fixtures/Vol 1 - TEST COPY/: imgtrans_Vol 1.json
llama-runtime/: build.gradle.kts
llama-runtime/src/main/cpp/: CMakeLists.txt  logging.h  vision_chat.cpp
(+33 files in other folders)
